<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="au.com.myphysioapp.myphysio.ui.login.SignInFVM"/>
    </data>

    <!-- TODO:Substitute the ConstraintLayout with LinearLayout -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/background">

        <include
            layout="@layout/login_with_widget"
            android:id="@+id/login_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_big"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            bind:listener="@{vm}"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_in_email"
            style="@style/SideMarginsTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_medium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_with"
            >

            <AutoCompleteTextView
                style="@style/SingleLineAutoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:text="@={vm.email}"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_in_password"
            style="@style/SideMarginsTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_huge"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_email"
            >

            <AutoCompleteTextView
                style="@style/SingleLineAutoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:text="@={vm.password}"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_in_btn"
            style="@style/WhiteOutlinedButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_big"
            android:onClick="@{vm::onClickSignIn}"
            android:text="@string/sign_in"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_password"
            />

        <TextView
            android:id="@+id/sign_in_forgot_password_btn"
            style="@style/Text.Common.Light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_medium"
            android:gravity="center"
            android:onClick="@{vm::onClickForgotPassword}"
            android:text="@string/forgot_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_btn"
            />

    </android.support.constraint.ConstraintLayout>
</layout>