<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="vm"
            type="au.com.myphysioapp.myphysio.ui.user_programs.ProgramContentAVM"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_program_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.user_programs.ProgramContentAVM">

        <android.support.v4.view.ViewPager
            android:id="@+id/exercise_preview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingBottom="15dp"
            android:paddingEnd="12dp"
            android:paddingStart="24dp"
            android:paddingTop="15dp"
            app:layout_constraintBottom_toTopOf="@+id/exercise_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            bind:pageMargin="@{(int)@dimen/viewpager_page_margin}"
            />

        <TextView
            android:id="@+id/exercise_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="6"
            android:text="@{vm.exerDescription}"
            android:textAppearance="@style/Text.Common"
            app:layout_constraintBottom_toTopOf="@+id/exercise_indicator"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="Exersice 1"
            />

        <com.viewpagerindicator.CirclePageIndicator
            android:id="@+id/exercise_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/page_indicator_padding"
            app:fillColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/exercise_duration"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:radius="@dimen/page_indicator_radius"
            bind:onPageChangeListener="@{vm.pageChangeListener}"
            bind:viewPager="@{exercisePreview}"
            />

        <LinearLayout
            android:id="@+id/exercise_duration"
            android:layout_width="@dimen/big_circle_view_size"
            android:layout_height="@dimen/big_circle_view_size"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:background="@drawable/oval_white"
            android:elevation="@dimen/circular_element_elevation"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLength="3"
                android:text="@{vm.exerDuration}"
                android:textAppearance="@style/Text.Medium.PrimaryBold"
                tools:text="120"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:text="@string/seconds_short"
                android:textAppearance="@style/Text.Small"
                android:textColor="@color/colorPrimaryDark"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/exercise_sets"
            style="@style/WhiteCircularTextView"
            android:layout_width="@dimen/medium_circle_size"
            android:layout_height="@dimen/medium_circle_size"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:maxLength="2"
            android:text="@{vm.exerSets}"
            app:layout_constraintRight_toLeftOf="@+id/exercise_side"
            app:layout_constraintTop_toTopOf="@+id/exercise_side"
            tools:text="2"
            />

        <TextView
            android:id="@+id/sets_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/common_margin_micro"
            android:text="@string/sets"
            android:textAppearance="@style/Text.Small.Light"
            app:layout_constraintLeft_toLeftOf="@+id/exercise_sets"
            app:layout_constraintRight_toRightOf="@+id/exercise_sets"
            app:layout_constraintTop_toBottomOf="@+id/exercise_sets"
            />

        <TextView
            android:id="@+id/exercise_side"
            style="@style/WhiteCircularTextView"
            android:layout_width="@dimen/medium_circle_size"
            android:layout_height="@dimen/medium_circle_size"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:maxLength="1"
            android:text="@{vm.exerSide}"
            app:layout_constraintBottom_toTopOf="@+id/side_label"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="L"
            />

        <TextView
            android:id="@+id/side_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_margin_micro"
            android:layout_marginTop="@dimen/common_margin_small"
            android:paddingTop="@dimen/common_margin_micro"
            android:text="@string/side"
            android:textAppearance="@style/Text.Small.Light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/exercise_side"
            app:layout_constraintRight_toRightOf="@id/exercise_side"
            />

    </android.support.constraint.ConstraintLayout>
</layout>
